env example added

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
-APP_NAME=Laravel
+APP_NAME=Proshore
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:Br0VUt9I6jRPqu5w9aR6k1/e5ZzZbhZiiOJ+jyond7c=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -11,17 +11,18 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=laravel
+DB_DATABASE=proshore
 DB_USERNAME=root
 DB_PASSWORD=
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
 FILESYSTEM_DISK=local
-QUEUE_CONNECTION=sync
+QUEUE_CONNECTION=database
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
-
+SESSION_DOMAIN=127.0.0.1:3000
+SANCTUM_STATEFUL_DOMAINS=127.0.0.1:3000
 MEMCACHED_HOST=127.0.0.1
 
 REDIS_HOST=127.0.0.1
@@ -29,11 +30,11 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_MAILER=smtp
-MAIL_HOST=mailpit
-MAIL_PORT=1025
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
+MAIL_HOST=sandbox.smtp.mailtrap.io
+MAIL_PORT=2525
+MAIL_USERNAME=aebdfbe4100a05
+MAIL_PASSWORD=2d6ebf536424c4
+MAIL_ENCRYPTION=tls
 MAIL_FROM_ADDRESS="hello@example.com"
 MAIL_FROM_NAME="${APP_NAME}"
 
